[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textureminer"
version = "4.1.0"
description = "Library and CLI program to extract and scale Minecraft item and block textures."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",

]
dependencies = [
    "forfiles>=5.0.0, <5.1.0",
    "fortext>=1.0.0, <1.2.0",
    "pillow>=11.0.0, <11.3.0",
    "requests>=2.32.0, <2.33.0",
]
keywords = ["minecraft", "cli"]
[[project.authors]]
name = "4MBL"

[project.license]
file = "LICENSE"

[project.scripts]
textureminer = "textureminer.cli:cli"

[project.urls]
Home = "https://github.com/4mbl/textureminer"
"Bug Tracker" = "https://github.com/4mbl/textureminer/issues"
Changelog = "https://github.com/4mbl/textureminer/blob/main/CHANGELOG.md"
Documentation = "https://github.com/4mbl/textureminer/blob/main/README.md"
Repository = "https://github.com/4mbl/textureminer"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "ISC001", "COM812"]
exclude = ["tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.tox]
requires = ["tox>=4.21"]
env_list = ["3.13", "3.12", "format", "lint", "typecheck"]
isolated_build = true
skip_missing_interpreters = true

[tool.tox.gh.python]
"3.13" = ["3.13", "format", "lint", "typecheck"]
"3.12" = ["3.12", "format", "lint", "typecheck"]

[tool.tox.env_run_base]
deps = ["-r requirements-dev.txt"]
commands = [["pytest", "{posargs:tests}", "--basetemp={envtmpdir}"]]
setenv = { PYTHONPATH = "{toxinidir}" }

[tool.tox.env.format]
deps = ["-r requirements-dev.txt"]
commands = [["ruff", "format", ".", "--config=pyproject.toml", "--check"]]

[tool.tox.env.lint]
deps = ["-r requirements-dev.txt"]
commands = [
    [
        "ruff",
        "check",
        ".",
        "--config=pyproject.toml",
        "--extend-exclude=tests",
    ],
]

[tool.tox.env.typecheck]
deps = ["-r requirements-dev.txt"]
commands = [["mypy", "src/"]]
